--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,25 @@
 {
-  "extends": "@tsconfig/node12/tsconfig.json",
+  "extends": "@tsconfig/node18/tsconfig.json",
   "compilerOptions": {
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext",
-      "es6",
-      "es2017",
-      "es2019"
-    ],
-    "moduleResolution": "node",
-    "noEmit": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": false,
-    "preserveConstEnums": true,
-    "removeComments": false,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    "declaration": true,
+    "target": "es6",
+    "module": "commonjs",
     "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "declaration": true
+    "outDir": "dist",
+    "rootDir": ".",
+    "allowJs": true,
+    "strictNullChecks": true,
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "DOM"
+    ]
   },
-  "ts-node": {
-    "files": true
-  },
-  "files": [
-    "node.d.ts",
-  ],
   "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "server.ts"
+    "dist",
+    "node_modules",
+    "example",
+    "tests"
   ]
 }
