--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.7",
     "ajv": "^8.12.0",
+    "json-schema-to-typescript": "^13.0.2",
     "openai": "^3.3.0",
     "spark-md5": "^3.0.2"
   },
