--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
+  "extends": "@tsconfig/node16/tsconfig.json",
   "compilerOptions": {
     "declaration": true,
     "target": "es6",
@@ -9,6 +9,7 @@
     "rootDir": ".",
     "allowJs": true,
     "strictNullChecks": true,
+    "noEmit": false,
     "typeRoots": [
       "node_modules/@types"
     ],
