--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "chai": "^4.3.10",
     "mocha": "^10.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.2.2"
+    "typescript": "5.2.2"
   }
 }
