--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contractor",
-  "version": "0.11.7",
+  "version": "0.11.8",
   "description": "OpenAI made easy",
   "repository": "git@github.com:pth-ai/contractor.git",
   "author": "Roman Landenband",
@@ -9,25 +9,24 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc --outDir dist/",
-    "test": "NODE_ENV=test mocha --exit"
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
-    "@dqbd/tiktoken": "^1.0.14",
-    "ajv": "^8.13.0",
-    "openai": "^4.42.0",
+    "@dqbd/tiktoken": "^1.0.15",
+    "ajv": "^8.17.1",
+    "openai": "^4.53.2",
     "spark-md5": "^3.0.2"
   },
   "devDependencies": {
     "@sinonjs/fake-timers": "^11.2.2",
     "@tsconfig/node18": "^18.2.4",
-    "@types/chai": "^4.3.16",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.12.10",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.12",
     "@types/sinonjs__fake-timers": "^8.1.5",
     "@types/spark-md5": "^3.0.4",
-    "chai": "^4.4.1",
-    "mocha": "^10.4.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
-    "typescript": "5.4.5"
+    "typescript": "5.5.4"
   }
 }
