--- a/package.json
+++ b/package.json
@@ -5,28 +5,41 @@
   "repository": "git@github.com:pth-ai/contractor.git",
   "author": "Roman Landenband",
   "license": "MIT",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/node/index.js",
+  "types": "./dist/node/index.d.ts",
   "scripts": {
-    "build": "tsc --outDir dist/",
+    "clean": "rimraf dist",
+    "build": "yarn clean && npm run build:browser && npm run build:node",
+    "build:node": "tsc -p tsconfig.node.json",
+    "build:browser": "rollup -c --bundleConfigAsCjs",
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.17",
     "ajv": "^8.17.1",
     "openai": "^4.71.1",
-    "spark-md5": "^3.0.2"
+    "spark-md5": "^3.0.2",
+    "useful": "^0.9.18"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@sinonjs/fake-timers": "^11.2.2",
+    "@tsconfig/node16": "^16.1.3",
     "@tsconfig/node18": "^18.2.4",
     "@types/jest": "^29.5.12",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.13",
     "@types/sinonjs__fake-timers": "^8.1.5",
     "@types/spark-md5": "^3.0.4",
     "jest": "^29.7.0",
+    "jsdom": "^24.1.1",
+    "rimraf": "^5.0.10",
+    "rollup": "^4.20.0",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
+    "tslib": "^2.6.3",
     "typescript": "5.6.3"
   }
 }
