--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-wasm": "^6.2.2",
     "@sinonjs/fake-timers": "^11.2.2",
     "@tsconfig/node16": "^16.1.3",
     "@tsconfig/node18": "^18.2.4",
