--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contractor",
-  "version": "0.14.7",
+  "version": "",
   "description": "OpenAI made easy",
   "repository": "git@github.com:pth-ai/contractor.git",
   "author": "Roman Landenband",
