--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
   "repository": "git@github.com:pth-ai/contractor.git",
   "author": "Roman Landenband",
   "license": "MIT",
-  "main": "./dist/node/index.js",
-  "types": "./dist/node/index.d.ts",
+  "main": "dist/node/index.cjs.js",
+  "module": "dist/node/index.esm.js",
+  "types": "dist/node/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/node/index.d.ts",
+      "import": "./dist/node/index.esm.js",
+      "require": "./dist/node/index.cjs.js",
+      "default": "./dist/node/index.cjs.js"
+    }
+  },
   "scripts": {
     "clean": "rimraf dist",
     "build": "yarn clean && npm run build:browser && npm run build:node",
@@ -19,7 +28,7 @@
     "ajv": "^8.17.1",
     "openai": "^4.95.1",
     "spark-md5": "^3.0.2",
-    "useful": "^0.9.20"
+    "useful": "^0.10.3"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.3",
@@ -28,18 +37,18 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@rollup/plugin-wasm": "^6.2.2",
     "@sinonjs/fake-timers": "^11.3.1",
-    "@tsconfig/node16": "^16.1.3",
+    "@tsconfig/node16": "^16.1.4",
     "@tsconfig/node18": "^18.2.4",
     "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.29",
     "@types/sinonjs__fake-timers": "^8.1.5",
     "@types/spark-md5": "^3.0.5",
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
-    "rimraf": "^5.0.10",
-    "rollup": "^4.40.0",
-    "ts-jest": "^29.3.2",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.41.1",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "typescript": "5.8.3"
